--- a/public/index.html
+++ b/public/index.html
@@ -6,18 +6,8 @@
 
         <body>
           <p>Welcome To Chat App</p>
-        <script src="/socket.io/socket.io.js"></script>
-        <script>
-           var socket = io();
-           socket.on('connect',() => {
-               console.log("connected to server");
-               
-           });
 
-           socket.on('disconnect',(socket) => {
-               console.log("server disconncted");
-               
-           })
-        </script>
+            <script src="/socket.io/socket.io.js"></script>
+            <script src="/js/index.js"></script>
         </body>
  </html>
