--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,18 @@
         <body>
           <p>Welcome To Chat App</p>
 
+          <ol id="messages">
+
+          </ol>
+
+            <form id="messageForm">
+               <input name="message" type="text" placeholder="Message"/>
+               <button>send</button>
+
+            </form>
+
             <script src="/socket.io/socket.io.js"></script>
+            <script src='js/libs//jquery-3.4.1.min.js'></script>
             <script src="/js/index.js"></script>
         </body>
  </html>
